fixed a weird bug that reproduced the old problem with the lights covering the secret bg

--- a/app/assets/stylesheets/components/_main.scss
+++ b/app/assets/stylesheets/components/_main.scss
@@ -45,7 +45,7 @@
   justify-content: center;
   flex-direction: column;
   top: 0;
-  width: 100%;
+  width: calc(100% - 215px);
   z-index: 1;
   padding: 2%;
   padding-top: 0;
